Adding aria-haspopup later must affect CanHaveChildren

Invalidate the object when aria-haspopup changes.

Explanation:

The cached native_role_ value, which is computed from
NativeAccessibilityRoleIgnoringAria(), must not return a different
result depending on whether aria-haspopup changes before/after the
caching.

This affects CanHaveChildren() for a button that changes its
aria-haspopup value. This in turn affects many other things for the
button, such such as aria-activedescendant computation.

Bug: 879032
Change-Id: I2b929623f7dfbc0ba926088add4d747af1f77ef7
Reviewed-on: https://chromium-review.googlesource.com/1196864
Commit-Queue: Aaron Leventhal <aleventhal@chromium.org>
Reviewed-by: Dominic Mazzoni <dmazzoni@chromium.org>
Cr-Commit-Position: refs/heads/master@{#587870}
Former-commit-id: 7a3135cf42d908445fd9f1a291058b8100a020f8