third_party/blink/renderer/modules/accessibility/ax_layout_object.cc
@@ -306,7 +306,7 @@ AccessibilityRole AXLayoutObject::NativeAccessibilityRoleIgnoringAria() const {
     if (node && node->IsLink())
       return kImageMapRole;
     if (IsHTMLInputElement(node))
-      return HasPopup() ? kPopUpButtonRole : kButtonRole;
+      return ButtonRoleType();
     if (IsSVGImage())
       return kSVGRootRole;
 
